src/parser/MyNewGrammar.java
/* Generated By:JJTree&JavaCC: Do not edit this line. MyNewGrammar.java */
package parser;
import util.*;
import ui.*;
import java.util.Iterator;
import java.util.ArrayList;


public class MyNewGrammar/*@bgen(jjtree)*/implements MyNewGrammarTreeConstants, MyNewGrammarConstants {/*@bgen(jjtree)*/
  protected JJTMyNewGrammarState jjtree = new JJTMyNewGrammarState();public QTList qtList = new QTList();

  public  boolean isError = false;

  public nodeList nodelist = new nodeList();


  public ArrayList < String > listError = new ArrayList < String > ();

  public void printQTList()
  {
    qtList.printQTTable();
  }

  public static void main(String args [])
  {
    System.out.println("Reading from standard input...");
    System.out.print("Enter an expression like \u005c"1+(2+3)*var;\u005c" :");
    MyNewGrammar parser = new MyNewGrammar(System.in);
    Token token = new Token();
    //  token=parser.getNextToken();
    //    while(token!=null) {
    //      System.out.println(token.kind+" "+token.image);
    //       token=parser.getNextToken();
    //      }
    try
    {
      SimpleNode n = parser.Start();
      n.dump("");
      System.out.println("Thank you.");
      parser.printQTList();
      Iterator<node> itr2 =  parser.nodelist.Nodelist.iterator();
                                                        while (itr2.hasNext()) {
                                                                node tmp = (node) itr2.next();
                                                        System.out.print(tmp.toString());

                                                                System.out.print("2");

                                                        }
    }
    catch (Exception e)
    {
      System.out.println("Oops.");
      System.out.println(e.getMessage());

//      isError=true;
//      listError.add(e.getMessage());
    }
  }

  final public SimpleNode Start() throws ParseException {
 /*@bgen(jjtree) Start */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      main_fun();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void main_fun() throws ParseException {
 /*@bgen(jjtree) main_fun */
  SimpleNode jjtn000 = new SimpleNode(JJTMAIN_FUN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_1;
        }
        funSatement();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
        jj_consume_token(VOID);
        break;
      case INT:
        jj_consume_token(INT);
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(MAIN);
      jj_consume_token(ZK);
      jj_consume_token(YK);
      jj_consume_token(ZH);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FOR:
        case WHILE:
        case IF:
        case BREAK:
        case SWITCH:
        case VOID:
        case CONTINUE:
        case INT:
        case DOUBLE:
        case FLOAT:
        case STRING:
        case CHAR:
        case DO:
        case FEN:
        case ZH:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        statementBlock();
      }
      jj_consume_token(YH);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void funSatement() throws ParseException {
 /*@bgen(jjtree) funSatement */
SimpleNode jjtn000 = new SimpleNode(JJTFUNSATEMENT);
boolean jjtc000 = true;
jjtree.openNodeScope(jjtn000);Token id;
    try {
      Type();
      Identifier();
      jj_consume_token(ZK);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
      case INT:
      case DOUBLE:
      case FLOAT:
      case STRING:
      case CHAR:
        Type();
        Identifier();
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case DOU:
            ;
            break;
          default:
            jj_la1[2] = jj_gen;
            break label_3;
          }
          jj_consume_token(DOU);
          Type();
          Identifier();
        }
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      jj_consume_token(YK);
      jj_consume_token(ZH);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FOR:
        case WHILE:
        case IF:
        case BREAK:
        case SWITCH:
        case VOID:
        case CONTINUE:
        case INT:
        case DOUBLE:
        case FLOAT:
        case STRING:
        case CHAR:
        case DO:
        case FEN:
        case ZH:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_4;
        }
        statementBlock();
      }
      jj_consume_token(YH);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public Token Type() throws ParseException {
 /*@bgen(jjtree) Type */
  SimpleNode jjtn000 = new SimpleNode(JJTTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t = null;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        t = jj_consume_token(INT);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return t;}
        break;
      case DOUBLE:
        t = jj_consume_token(DOUBLE);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return t;}
        break;
      case FLOAT:
        t = jj_consume_token(FLOAT);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return t;}
        break;
      case STRING:
        t = jj_consume_token(STRING);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return t;}
        break;
      case CHAR:
        t = jj_consume_token(CHAR);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return t;}
        break;
      case VOID:
        t = jj_consume_token(VOID);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return t;}
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void declearStatement() throws ParseException {
 /*@bgen(jjtree) declearStatement */
  SimpleNode jjtn000 = new SimpleNode(JJTDECLEARSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token id;
  Token exp = null;
  Token type;
  String e1 = null;
    try {
      type = Type();
      id = Identifier();
    if (!nodelist.isEmpty() && nodelist.isExist(id.image))
    {
      isError = true;
      System.out.println("\u53d8\u91cf" + id.image + "\u91cd\u590d\u58f0\u660e,\u9519\u8bef\u5728" + id.endLine + "\u884c," + id.endColumn + "\u5217");
      listError.add("\u53d8\u91cf" + id.image + "\u91cd\u590d\u58f0\u660e,\u9519\u8bef\u5728" + id.endLine + "\u884c," + id.endColumn + "\u5217");
    }
    else
    {
      nodelist.addnode(type.image, id.image,id.endLine,id.endColumn);
    }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        exp = jj_consume_token(ASSIGN);
        e1 = Expression();
      QTInfo info = new QTInfo(exp.image, e1, "_", id.image);
      qtList.addQTInfo(info);
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOU:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_5;
        }
        jj_consume_token(DOU);
        id = Identifier();
      if (      !nodelist.isEmpty() && nodelist.isExist(id.image))
      {
        isError = true;
        System.out.println("\u53d8\u91cf" + id.image + "\u91cd\u590d\u58f0\u660e,\u9519\u8bef\u5728" + id.endLine + "\u884c," + id.endColumn + "\u5217");
        listError.add("\u53d8\u91cf" + id.image + "\u91cd\u590d\u58f0\u660e,\u9519\u8bef\u5728" + id.endLine + "\u884c," + id.endColumn + "\u5217");
      }
      else
      {
        nodelist.addnode(type.image, id.image,id.endLine,id.endColumn);
      }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ASSIGN:
          exp = jj_consume_token(ASSIGN);
          e1 = Expression();
        QTInfo info = new QTInfo(exp.image, e1, "_", id.image);
        qtList.addQTInfo(info);
          break;
        default:
          jj_la1[8] = jj_gen;
          ;
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void assignStatement() throws ParseException {
 /*@bgen(jjtree) assignStatement */
  SimpleNode jjtn000 = new SimpleNode(JJTASSIGNSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token id;
  String exp;
  Token e1;
    try {
      id = Identifier();
      e1 = jj_consume_token(ASSIGN);
      exp = Expression();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
                if(nodelist.isExist(id.image)==false)
                {

        isError = true;
        System.out.println("\u53d8\u91cf" + id.image + "\u672a\u5b9a\u4e49,\u9519\u8bef\u5728" + id.endLine + "\u884c," + id.endColumn + "\u5217");
        listError.add("\u53d8\u91cf" + id.image + "\u672a\u5b9a\u4e49,\u9519\u8bef\u5728" + id.endLine + "\u884c," + id.endColumn + "\u5217");
    }

    QTInfo qt = new QTInfo(e1.image, exp, "_", id.image);
    qtList.addQTInfo(qt);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public ConditionValue orExpression() throws ParseException {
 /*@bgen(jjtree) orExpression */
  SimpleNode jjtn000 = new SimpleNode(JJTOREXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);ConditionValue c1;
  ConditionValue c2;
    try {
      c1 = andExpression();
    c2 = c1;
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OR:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_6;
        }
        jj_consume_token(OR);
      c1.backpatchFalseChain(QTInfo.size + 1);
        c2 = andExpression();
      c2.mergeTrue(c1);
      c1 = c2;
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return c2;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public ConditionValue andExpression() throws ParseException {
 /*@bgen(jjtree) andExpression */
  SimpleNode jjtn000 = new SimpleNode(JJTANDEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);ConditionValue e1, e2 = null;
  Token rop = null;
    try {
      e1 = NoBOOLExpression();
    e2 = e1;
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AND:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_7;
        }
        rop = jj_consume_token(AND);
      e1.backpatchTrueChain(QTInfo.size + 1);
        e2 = NoBOOLExpression();
      e2.mergeFalse(e1);
      e1 = e2;
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return e2;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

//¬ﬂº≠∑«
  final public ConditionValue NoBOOLExpression() throws ParseException {
 /*@bgen(jjtree) NoBOOLExpression */
  SimpleNode jjtn000 = new SimpleNode(JJTNOBOOLEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);ConditionValue c1;
  ConditionValue c2 = new ConditionValue();
  boolean flag = true;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 57:
        jj_consume_token(57);
    flag = false;
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      c1 = relExpression();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    if (!flag)
    {
      c2.trueChain = c1.falseChain;
      c2.falseChain = c1.trueChain;
      {if (true) return c2;}
    }
    {if (true) return c1;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }
